# result

./: .clang-format  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  ROADMAP.md  meson.build  meson_options.txt  shell.nix
.github/workflows/: main.yml
docs/: docs.md
include/: error.h  panic.h  result.h  vcs_version.h.in  version.h.in
include/ports/: errors.h  ports.h
include/ports/libc/: errors.h
man/: result.3
src/: error.c  panic.c  result.c
src/ports/: ports.c
src/ports/libc/: errors.c
